fixed some documentation
