# swagger.json
@@ -8,8 +8,8 @@
   "host": "seanwallace.ca",
   "basePath": "/v1",
   "tags": [
-    {"name": "reviews",
-      "description": "Review Operations"
+    {"name": "posts",
+      "description": "post Operations"
     },
     {
       "name": "comments",
@@ -25,14 +25,14 @@
     "http"
   ],
   "paths": {
-    "/reviews":{
+    "/posts":{
       "get":{
         "tags": [
-          "reviews"
+          "posts"
         ],
-        "summary": "Get all reviews",
-        "description": "Returns all Reviews",
-        "operationId": "getReviews",
+        "summary": "Get all posts",
+        "description": "Returns all posts",
+        "operationId": "getposts",
         "produces": [
           "application/json"
         ],
@@ -41,27 +41,27 @@
             "description": "successful operation",
             "schema": {
               "type":"array",
-              "items": {"$ref": "#/definitions/review"}
+              "items": {"$ref": "#/definitions/post"}
               
             }
           }
         }
       },
       "post": {
-        "tags": ["reviews"],
-        "summary": "Create a new review",
+        "tags": ["posts"],
+        "summary": "Create a new post",
         "description": "",
-        "operationId": "addReview",
+        "operationId": "addpost",
         "consumes": ["application/json"],
         "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
             "name": "body",
-            "description": "Review Object that needs to be added to the site",
+            "description": "post Object that needs to be added to the site",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/review"
+              "$ref": "#/definitions/post"
             }
           }
         ],
@@ -72,18 +72,18 @@
         }
       },
       "put": {
-        "tags": ["reviews"],
-        "summary": "Update a review",
+        "tags": ["posts"],
+        "summary": "Update a post",
         "consumes": ["application/json"],
         "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
             "name": "body",
-            "description": "Review Object that needs to be updated on the site",
+            "description": "post Object that needs to be updated on the site",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/review"
+              "$ref": "#/definitions/post"
             }
           }
         ],
@@ -92,7 +92,7 @@
             "description": "Invalid ID supplied"
           },
           "404": {
-            "description": "Review not found"
+            "description": "post not found"
           },
           "405": {
             "description": "Validation exception"
@@ -100,12 +100,12 @@
         }
       }
     },
-    "/reviews/{reviewID}":{
+    "/posts/{postID}":{
       "delete": {
-        "tags": ["reviews"],
-        "summary": "Delete a review",
+        "tags": ["posts"],
+        "summary": "Delete a post",
         "description": "",
-        "operationId": "deleteReview",
+        "operationId": "deletepost",
         "produces": [
           "application/json"
         ],
@@ -117,9 +117,9 @@
             "type": "string"
           },
           {
-            "name": "reviewId",
+            "name": "postID",
             "in": "path",
-            "description": "review id to delete",
+            "description": "post id to delete",
             "required": true,
             "type": "integer",
             "format": "int64"
@@ -130,7 +130,7 @@
             "description": "Invalid ID supplied"
           },
           "404": {
-            "description": "Review not found"
+            "description": "post not found"
           }
       }
     }
@@ -147,7 +147,7 @@
           {
             "in": "body",
             "name": "body",
-            "description": "Comment object too be added to a review",
+            "description": "Comment object too be added to a post",
             "required": true,
             "schema": {
               "$ref": "#/definitions/comment"
@@ -189,21 +189,21 @@
         }
       }
     },
-    "/comments/{reviewID}":{
+    "/comments/commentsForPost/{postID}":{
       "get":{
         "tags": [
           "comments"
         ],
-        "summary": "Get comments for a review",
-        "description": "Return the comments for a review",
-        "operationId": "getCommentsByReview",
+        "summary": "Get comments for a post",
+        "description": "Return the comments for a post",
+        "operationId": "getCommentsBypost",
         "produces": [
           "application/json"
         ],
         "parameters": [{
-          "name": "reviewID",
+          "name": "postID",
           "in": "path",
-          "description": "review id to get comment",
+          "description": "post id to get comment",
           "required": true,
           "type": "integer",
           "format": "int64"
@@ -268,19 +268,22 @@
             "description": "Created user object",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/NewUser"
             }
           }
         ],
         "responses": {
-          "default": {
-            "description": "successful operation"
+          "201": {
+            "description": "New user created"
+          },
+          "400":{
+            "description": "Error message"
           }
         }
       }
     },
     "/user/login": {
-      "get": {
+      "post": {
         "tags": [
           "user"
         ],
@@ -293,18 +296,13 @@
         ],
         "parameters": [
           {
-            "name": "username",
-            "in": "query",
-            "description": "The user name for login",
+            "in": "body",
+            "name":"body",
+            "description": "The login info",
             "required": true,
-            "type": "string"
-          },
-          {
-            "name": "password",
-            "in": "query",
-            "description": "The password for login in clear text",
-            "required": true,
-            "type": "string"
+            "schema": {
+              "$ref": "#/definitions/login"
+            }
           }
         ],
         "responses": {
@@ -322,7 +320,7 @@
       }
     },
     "/user/logout": {
-      "get": {
+      "post": {
         "tags": [
           "user"
         ],
@@ -335,7 +333,7 @@
         ],
         "parameters": [],
         "responses": {
-          "default": {
+          "200": {
             "description": "successful operation"
           }
         }
@@ -463,12 +461,15 @@
     }
   },
   "definitions": {
-    "review":{
+    "post":{
       "type": "object",
       "properties": {
         "id":{
           "type":"integer",
           "format": "int64"
+        },
+        "title":{
+          "type":"string"
         },
         "content":{
           "type":"string"
@@ -481,7 +482,7 @@
     "comment":{
       "type": "object",
       "properties": {
-        "reviewID":{
+        "postID":{
           "type": "string"
         },
         "id":{
@@ -497,7 +498,30 @@
         
       }
     },
-  
+    "NewUser": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "repeatPassword":{
+          "type":"string"
+        },
+        "authorization":{
+          "type": "string",
+          "enum": [
+            "admin",
+            "user"
+          ]
+        }
+      },
+      "xml": {
+        "name": "User"
+      }
+    },
     "User": {
       "type": "object",
       "properties": {
@@ -508,18 +532,26 @@
         "username": {
           "type": "string"
         },
-        "email": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        },
         "authorization":{
           "type": "string",
           "enum": [
             "admin",
             "user"
           ]
+        }
+      },
+      "xml": {
+        "name": "User"
+      }
+    },
+    "login": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
         }
       },
       "xml": {
